--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ yarn-error.log*
 # cypress
 cypress/screenshots
 cypress/videos
+cypress/downloads
 reports/
 cypress/integration/examples
 cypress/fixtures/example.json
